--- a/test/index.html
+++ b/test/index.html
@@ -35,6 +35,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       // './CurrencyExchange-app/user-list_test.html?dom=shadow',
       './ShopApp-app/shopApp-app_test.html?dom=shadow',
       './ShopApp-app/login-page_test.html?dom=shadow',
+      './ShopApp-app/registration-page_test.html?dom=shadow',
+      './ShopApp-app/dashboard-page_test.html?dom=shadow',
+      './ShopApp-app/normalUser-page_test.html?dom=shadow',
       
 
       // Load 'my-view1.html' test suite, using shadydom
